WIP: refactoring code